Updated docker-compose.yml file

--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -1,9 +1,8 @@
-version: '3.8'
 
 services:
   django:
     build:
-      context: .
+      context: ./django
       dockerfile: Dockerfile
     container_name: django_app
     command: ["gunicorn", "--bind", "0.0.0.0:8000", "config.wsgi:application"]
@@ -19,7 +18,7 @@ services:
 
   celery_worker_embeddings:
     build:
-      context: .
+      context: ./celery
       dockerfile: Dockerfile.celery
     container_name: celery_worker_embeddings
     command: ["worker", "--loglevel=info", "--queues=embeddings"]
@@ -32,7 +31,7 @@ services:
 
   celery_worker_queries:
     build:
-      context: .
+      context: ./celery
       dockerfile: Dockerfile.celery
     container_name: celery_worker_queries
     command: ["worker", "--loglevel=info", "--queues=queries"]
@@ -44,14 +43,14 @@ services:
 
 
   rabbitmq:
-    image: rabbitmq:3-management
+    image: rabbitmq:management
     container_name: rabbitmq
     ports:
       - "5672:5672"
       - "15672:15672"
 
   postgres:
-    image: postgres:13
+    image: postgres:15
     container_name: postgres
     environment:
       POSTGRES_USER: postgres
