--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
           docker compose build
           
           # Tagging images
-          docker tag django_app $IMAGE_REPO/django-app:latest
+          docker tag django-app $IMAGE_REPO/django-app:latest
           docker tag celery_worker_embeddings $IMAGE_REPO/celery-embeddings:latest
           docker tag celery_worker_queries $IMAGE_REPO/celery-queries:latest
           docker tag rabbitmq $IMAGE_REPO/rabbitmq:latest
