--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: django_app
+    container_name: django-app
     command: ["gunicorn", "--bind", "0.0.0.0:8000", "config.wsgi:application"]
     volumes:
       - .:/app
